--- a/style2.css
+++ b/style2.css
@@ -7042,7 +7042,8 @@ img.lazy {
     max-width:500px;
 }
 .swiper-slide{
-    height:500px;
+    height:auto;
+    margin-bottom:35px;
 }
 .swiper-slide>img.lazy.loaded{
     object-fit:contain;
