--- a/style.css
+++ b/style.css
@@ -7120,3 +7120,41 @@ h2.bg {
 #main_containers .container, #main_containers .container-md, #main_containers .container-sm {
     max-width: 100% !important;
 }
+img.lazy.loaded {
+    width: 20vmin !important;
+    height: 20vmin !important;
+
+    max-width: 200px !important;
+    max-height: 200px !important;
+
+    min-width: 100px !important;
+    min-height: 100px !important;
+
+    object-fit: cover;
+}
+
+
+@media screen and (max-width: 1300px) {
+    .s5 .scheme-item.one { 
+        width: 432px !important;
+    }
+}
+@media screen and (max-width: 1040px) {
+    .s5 .scheme-item.one { 
+        width: 400px !important;
+    }
+}
+
+.swiper-slide:last-child{
+    margin-bottom: 0;
+}
+.swiper-slide h2.bg{
+    text-align: center;
+}
+.years_10 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+.years_10 .sub-title {
+    margin: 0 auto !important;
+}
