--- a/style.css
+++ b/style.css
@@ -7159,6 +7159,13 @@ h2.bg {
     margin: 0 auto !important;
 }
 .years_10 .h2.bg span:before {
-    width: calc(100% + 26px);
-    left: -30px;
+    content: "";
+    display: block;
+    background: #FFA500;
+    width: calc(100% + 29px);
+    height: 15px;
+    z-index: -1;
+    position: absolute;
+    bottom: 6px;
+    left: -6px;
 }
