--- a/style.css
+++ b/style.css
@@ -7158,7 +7158,7 @@ h2.bg {
 .years_10 .sub-title {
     margin: 0 auto !important;
 }
-.years_10 h2.bg span:before {
+.done_works h2 class=“bg done_works” {
     width: calc(100% + 40px);
     left: -38px;
 }
