--- a/style.css
+++ b/style.css
@@ -7159,11 +7159,11 @@ h2.bg {
     margin: 0 auto !important;
 }
 .done_works span:before {
-    width: calc(100% + 40px);
-    left: -38px;
+    width: calc(100% + 30px) !important;
+    left: -25px;
 }
 @media (max-width: 575px){
     .s5 .scheme-item.one {
-        width: 293px;
+        width: 293px !important;
     }
 }
