--- a/style.css
+++ b/style.css
@@ -935,11 +935,10 @@ h2.wg span:before {
     min-height: 141px;
     text-align: left;
     padding-left: 126px;
-    /* padding-left: 126px; */
     z-index: 0;
 }
 .s5 .scheme-item.one {
-    background: url("https://drive.google.com/uc?export=view&id=1M3czlFoQbTgo8AsPwJu-stb4nWjzzdsA") no-repeat;
+    background: url("https://antony-profi.github.io/Site/01.png") no-repeat;
     float: left;
     margin-top: 62px;
     margin-left: 99px;
