--- a/style.css
+++ b/style.css
@@ -947,7 +947,7 @@ h2.wg span:before {
 .s5 .scheme-item.one:after {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1y4qgWj-p-nr35NUnB-V9BRy_Wh7Eev8-");
+    background: url("https://antony-profi.github.io/Site/line-1.png");
     width: 117px;
     height: 96px;
     position: absolute;
@@ -956,7 +956,7 @@ h2.wg span:before {
     z-index: -1;
 }
 .s5 .scheme-item.two {
-    background: url("https://drive.google.com/uc?export=view&id=1AIGnB8bWs74buTLZ_1E7dQGfORjwNjDL") no-repeat;
+    background: url("https://antony-profi.github.io/Site/02.png") no-repeat;
     float: left;
     margin-top: 50px;
     margin-left: 242px;
@@ -965,7 +965,7 @@ h2.wg span:before {
 .s5 .scheme-item.two:before {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1r1P8yDCEaho4iPPb_9yL1_rUEqJJVOjn");
+    background: url("https://antony-profi.github.io/Site/line-2.png");
     width: 254px;
     height: 93px;
     position: absolute;
@@ -974,7 +974,7 @@ h2.wg span:before {
     z-index: -1;
 }
 .s5 .scheme-item.three {
-    background: url("https://drive.google.com/uc?export=view&id=1iZlaRJXE6zYZLStN7Hal1pOlNe_goyKK") no-repeat;
+    background: url("https://antony-profi.github.io/Site/03.png") no-repeat;
     float: left;
     margin-top: 62px;
     margin-left: -30px;
@@ -983,7 +983,7 @@ h2.wg span:before {
 .s5 .scheme-item.three:after {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1vTJWMyq95gddT_NJ8m4wcqwHtcqeUJs9");
+    background: url("https://antony-profi.github.io/Site/line-3.png");
     width: 114px;
     height: 117px;
     position: absolute;
@@ -992,7 +992,7 @@ h2.wg span:before {
     z-index: -1;
 }
 .s5 .scheme-item.four {
-    background: url("https://drive.google.com/uc?export=view&id=1sMJ-Gu1j2-ETaKD7AKM2u67dO_ej1pba") no-repeat;
+    background: url("https://antony-profi.github.io/Site/04.png") no-repeat;
     float: left;
     margin-top: 50px;
     margin-left: 17px;
