--- a/style.css
+++ b/style.css
@@ -788,7 +788,7 @@ h2.bg span:before {
 }
 .s3 .stand-mozaika {
     margin-top: 30px;
-    background: url("https://drive.google.com/uc?export=view&id=1Rpkcm8rrthn9zIG9TlJI96hkGjQU0CtC") no-repeat center 0;
+    background: url("https://antony-profi.github.io/Site/stand-mozaika.png") no-repeat center 0;
     padding-top: 27px;
 }
 .s3 .stand-mozaika .stand-item {
@@ -899,7 +899,7 @@ h2.bg span:before {
     position: absolute;
     top: -52px;
     left: -744px;
-    background: url("https://drive.google.com/uc?export=view&id=1FL1meAt_lfX9Ny2GaIqneQzD-TE9_tlx");
+    background: url("https://antony-profi.github.io/Site/mozaika.png");
     width: 603px;
     height: 603px;
 }
@@ -909,7 +909,7 @@ h2.bg span:before {
     position: absolute;
     top: -151px;
     right: -678px;
-    background: url("https://drive.google.com/uc?export=view&id=1g2YMiGGQ1YP0eJGFdVuUDk5dbiuxGnz3");
+    background: url("https://antony-profi.github.io/Site/orange_gear.png");
     width: 436px;
     height: 436px;
 }
