--- a/style.css
+++ b/style.css
@@ -1513,7 +1513,7 @@ h2.wg span:before {
     display: block;
     width: 68px;
     height: 35px;
-    background: url("https://drive.google.com/uc?export=view&id=1gCfo57BCpJBSD3G4ZXDNm3b0lLUBuHB3");
+    background: url("https://antony-profi.github.io/Site/1.png");
     position: absolute;
     top: -36px;
     right: 0;
@@ -1530,7 +1530,7 @@ h2.wg span:before {
     color: #1e1e1d;
     padding-left: 38px;
     margin-bottom: 33px;
-    background: url("https://drive.google.com/uc?export=view&id=1yOCdb57bjLfvelUIM4VdS_EU9n0fgIgj") no-repeat 0 3px;
+    background: url("https://antony-profi.github.io/Site/check_mark.png") no-repeat 0 3px;
 }
 .s11 {
     padding-top: 55px;
