--- a/style2.css
+++ b/style2.css
@@ -918,7 +918,7 @@ h2.wg span:before {
     display: block;
     width: 80px;
     height: 194px;
-    background: url("https://drive.google.com/uc?export=view&id=1BfeygfT2b3H18ZdSFGGdxsPil_gLl0N3");
+    background: url("https://antony-profi.github.io/Site/style.css");
     position: absolute;
     top: 320px;
     right: 0
@@ -946,7 +946,7 @@ h2.bg span:before {
 
 .s3 .stand-mozaika {
     margin-top: 30px;
-    background: url("https://drive.google.com/uc?export=view&id=1Rpkcm8rrthn9zIG9TlJI96hkGjQU0CtC") center 0 no-repeat;
+    background: url("https://antony-profi.github.io/Site/stand-mozaika.png") center 0 no-repeat;
     padding-top: 27px
 }
 
@@ -1076,7 +1076,7 @@ h2.bg span:before {
     position: absolute;
     top: -52px;
     left: -744px;
-    background: url("https://drive.google.com/uc?export=view&id=1FL1meAt_lfX9Ny2GaIqneQzD-TE9_tlx");
+    background: url("https://antony-profi.github.io/Site/mozaika.png");
     width: 603px;
     height: 603px
 }
@@ -1087,7 +1087,7 @@ h2.bg span:before {
     position: absolute;
     top: -151px;
     right: -678px;
-    background: url("https://drive.google.com/uc?export=view&id=1g2YMiGGQ1YP0eJGFdVuUDk5dbiuxGnz3");
+    background: url("https://antony-profi.github.io/Site/orange_gear.png");
     width: 436px;
     height: 436px
 }
@@ -1111,7 +1111,7 @@ h2.wg span:before {
 }
 
 .s5 .scheme-item.one {
-    background: url("https://drive.google.com/uc?export=view&id=1M3czlFoQbTgo8AsPwJu-stb4nWjzzdsA") no-repeat;
+    background: url("https://antony-profi.github.io/Site/01.png") no-repeat;
     float: left;
     margin-top: 62px;
     margin-left: 99px;
@@ -1121,7 +1121,7 @@ h2.wg span:before {
 .s5 .scheme-item.one:after {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1y4qgWj-p-nr35NUnB-V9BRy_Wh7Eev8-");
+    background: url("https://antony-profi.github.io/Site/line-1.png");
     width: 117px;
     height: 96px;
     position: absolute;
@@ -1131,7 +1131,7 @@ h2.wg span:before {
 }
 
 .s5 .scheme-item.two {
-    background: url("https://drive.google.com/uc?export=view&id=1AIGnB8bWs74buTLZ_1E7dQGfORjwNjDL") no-repeat;
+    background: url("https://antony-profi.github.io/Site/02.png") no-repeat;
     float: left;
     margin-top: 50px;
     margin-left: 242px;
@@ -1141,7 +1141,7 @@ h2.wg span:before {
 .s5 .scheme-item.two:before {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1r1P8yDCEaho4iPPb_9yL1_rUEqJJVOjn");
+    background: url("https://antony-profi.github.io/Site/line-2.png");
     width: 254px;
     height: 93px;
     position: absolute;
@@ -1151,7 +1151,7 @@ h2.wg span:before {
 }
 
 .s5 .scheme-item.three {
-    background: url("https://drive.google.com/uc?export=view&id=1iZlaRJXE6zYZLStN7Hal1pOlNe_goyKK") no-repeat;
+    background: url("https://antony-profi.github.io/Site/03.png") no-repeat;
     float: left;
     margin-top: 62px;
     margin-left: -30px;
@@ -1161,7 +1161,7 @@ h2.wg span:before {
 .s5 .scheme-item.three:after {
     content: "";
     display: block;
-    background: url("https://drive.google.com/uc?export=view&id=1vTJWMyq95gddT_NJ8m4wcqwHtcqeUJs9");
+    background: url("https://antony-profi.github.io/Site/line-3.png");
     width: 114px;
     height: 117px;
     position: absolute;
@@ -1171,7 +1171,7 @@ h2.wg span:before {
 }
 
 .s5 .scheme-item.four {
-    background: url("https://drive.google.com/uc?export=view&id=1sMJ-Gu1j2-ETaKD7AKM2u67dO_ej1pba") no-repeat;
+    background: url("https://antony-profi.github.io/Site/04.png") no-repeat;
     float: left;
     margin-top: 50px;
     margin-left: 17px;
@@ -1215,7 +1215,7 @@ h2.wg span:before {
     display: block;
     width: 454px;
     height: 454px;
-    background: url("https://drive.google.com/uc?export=view&id=1g2YMiGGQ1YP0eJGFdVuUDk5dbiuxGnz3");
+    background: url("https://antony-profi.github.io/Site/orange_gear.png");
     position: absolute;
     left: 323px;
     top: -38px
@@ -1251,7 +1251,7 @@ h2.wg span:before {
     position: absolute;
     width: 19px;
     height: 19px;
-    background: url("https://drive.google.com/uc?export=view&id=14xgM0ZD0U3hGTMb1wbVrDZ73aaCE_tgj");
+    background: url("https://antony-profi.github.io/Site/magnifying_glass.png");
     left: 8px;
     bottom: 6px;
     z-index: 1
@@ -1276,7 +1276,7 @@ h2.wg span:before {
     position: absolute;
     left: 0;
     top: 375px;
-    background: url("https://drive.google.com/uc?export=view&id=1bRhdN_9xTjvy6dv7SF5pCt_jZsGt58FE");
+    background: url("https://antony-profi.github.io/Site/switches.png");
     color: transparent;
     text-indent: -9999px;
     width: 15px;
@@ -1740,7 +1740,7 @@ ul.wsp-posts-list li {
     display: block;
     width: 68px;
     height: 35px;
-    background: url("https://drive.google.com/uc?export=view&id=1gCfo57BCpJBSD3G4ZXDNm3b0lLUBuHB3");
+    background: url("https://antony-profi.github.io/Site/1.png");
     position: absolute;
     top: -36px;
     right: 0
@@ -1759,7 +1759,7 @@ ul.wsp-posts-list li {
     color: #1e1e1d;
     padding-left: 38px;
     margin-bottom: 33px;
-    background: url("https://drive.google.com/uc?export=view&id=1yOCdb57bjLfvelUIM4VdS_EU9n0fgIgj") 0 3px no-repeat
+    background: url("https://antony-profi.github.io/Site/check_mark.png") 0 3px no-repeat
 }
 
 .s11 {
@@ -2918,7 +2918,7 @@ footer .footer-menu ul li a:hover {
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba(0, 0, 0, .5);
-    background-image: url("https://drive.google.com/uc?export=view&id=1F3kDsBGSrRuaXSjXn78z5FS4D_8Wy11E")
+    background-image: url("https://antony-profi.github.io/Site/magnifying_super_glass.png")
 }
 
 .s2 .tabs .tabs__caption {
@@ -4446,7 +4446,7 @@ ul.wsp-posts-list li a {
         display: block;
         width: 68px;
         height: 35px;
-        background: url("https://drive.google.com/uc?export=view&id=1gCfo57BCpJBSD3G4ZXDNm3b0lLUBuHB3");
+        background: url("https://antony-profi.github.io/Site/1.png");
         position: absolute;
         top: -36px;
         right: 0
