--- a/style.css
+++ b/style.css
@@ -759,7 +759,7 @@ h2.bw span:before {
     display: block;
     width: 80px;
     height: 194px;
-    background: url("https://drive.google.com/uc?export=view&id=1BfeygfT2b3H18ZdSFGGdxsPil_gLl0N3");
+    background: url("https://antony-profi.github.io/Site/style.css");
     position: absolute;
     top: 320px;
     right: 0;
@@ -1033,7 +1033,7 @@ h2.wg span:before {
     display: block;
     width: 454px;
     height: 454px;
-    background: url("https://drive.google.com/uc?export=view&id=1g2YMiGGQ1YP0eJGFdVuUDk5dbiuxGnz3");
+    background: url("https://antony-profi.github.io/Site/orange_gear.png");
     /* background: url("img/bg-11.png"); */
     position: absolute;
     left: 323px;
@@ -1068,7 +1068,7 @@ h2.wg span:before {
     height: 19px;
     /* background: url("img/zoom.png"); */
     /* background: url("https://drive.google.com/file/d/14xgM0ZD0U3hGTMb1wbVrDZ73aaCE_tgj/view"); */
-    background: url("https://drive.google.com/uc?export=view&id=14xgM0ZD0U3hGTMb1wbVrDZ73aaCE_tgj");
+    background: url("https://antony-profi.github.io/Site/magnifying_glass.png");
     left: 8px;
     bottom: 6px;
     z-index: 1;
@@ -1091,7 +1091,7 @@ h2.wg span:before {
     position: absolute;
     left: 0;
     top: 375px;
-    background: url("https://drive.google.com/uc?export=view&id=1bRhdN_9xTjvy6dv7SF5pCt_jZsGt58FE") 0 0;
+    background: url("https://antony-profi.github.io/Site/switches.png") 0 0;
     color: transparent;
     text-indent: -9999px;
     width: 15px;
@@ -2678,7 +2678,7 @@ h2.wg span:before {
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba(0, 0, 0, 0.5);
-    background-image: url("https://drive.google.com/uc?export=view&id=1F3kDsBGSrRuaXSjXn78z5FS4D_8Wy11E");
+    background-image: url("https://antony-profi.github.io/Site/magnifying_super_glass.png");
 }
 .mini-gal a:hover:after {
     opacity: 1;
@@ -4267,7 +4267,7 @@ ul.wsp-posts-list li a {
         display: block;
         width: 68px;
         height: 35px;
-        background: url("https://drive.google.com/uc?export=view&id=1gCfo57BCpJBSD3G4ZXDNm3b0lLUBuHB3");
+        background: url("https://antony-profi.github.io/Site/1.png");
         position: absolute;
         top: -36px;
         right: 0;
